--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -6,7 +6,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}/controller
+  IMAGE_NAME: ${{ github.repository }}-controller
 
 jobs:
   build-and-push-image:
