--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -39,6 +39,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context: .
+          file: sub/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
