--- a/.github/workflows/publish-helm.yaml
+++ b/.github/workflows/publish-helm.yaml
@@ -43,7 +43,7 @@ jobs:
         helm package --version ${{ github.event.release.tag_name }} $CHART_DIR
     - name: Create index
       run: |
-        helm repo index --url {{ github.server_url }}/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }} --merge ./index/index.yaml .
+        helm repo index --url ${{ github.server_url }}/${{ github.repository }}/releases/download/${{ github.event.release.tag_name }} --merge ./index/index.yaml .
         mv index.yaml index
         cd index
         git config user.name github-actions
