--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -38,6 +38,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
+          platforms: linux/amd64,linux/arm64
           context: .
           file: sub/Dockerfile
           push: true
