--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,15 +12,15 @@ jobs:
       uses: actions/checkout@v3
     - name: Go Build
       run: |
-        go build -o bin/out main.go
+        go build -o bin/manager main.go
     - run: |
         cat > Dockerfile <<END
         FROM scratch
         WORKDIR /
-        COPY bin/out /out
+        COPY bin/manager /manager
         USER 65532:65532
-        ENTRYPOINT ["/out"]
+        ENTRYPOINT ["/manager"]
         END
-        docker build -t out:latest .
-        docker run --rm out:latest
+        docker build -t manager:latest .
+        docker run --rm manager:latest
 
