--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -43,6 +43,8 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           context: .
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
           file: sub/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
