--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -38,6 +38,10 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
+            type=schedule
+            type=ref,event=branch
+            type=ref,event=tag
+            type=ref,event=pr
             type=sha,format=long
       - name: Build and push Docker image
         uses: docker/build-push-action@v4
