--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -48,10 +48,10 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
           context: .
-          #cache-from: type=gha
-          #cache-to: type=gha,mode=max
           cache-from: |
-            type=registry,ref=${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:sha-${{ github.sha }}
+            type=gha,scope=gha-${{ github.sha }}
+          cache-to: |
+            type=gha,scope=gha-${{ github.sha }},mode=max
           file: sub/Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
