--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,15 +12,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Go Build
       run: |
-        go build -o bin/manager main.go
-    - run: |
-        cat > Dockerfile <<END
-        FROM scratch
-        WORKDIR /
-        COPY bin/manager /manager
-        USER 65532:65532
-        ENTRYPOINT ["/manager"]
-        END
-        docker build -t manager:latest .
-        docker run --rm manager:latest
-
+        echo "*** ${{ github.ref }} ***"
+        echo "*** ${{ github.ref_name }} ***"
+        echo "*** ${{ github.base_ref || "dummy" }} ***"
+         
