--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,15 +8,12 @@ on:
     - main
 
 jobs:
-  docker-test:
-    name: Run docker 
+  do-the-test:
+    name: Do something
     runs-on: ubuntu-22.04
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Go Build
+    - name: Do it
       run: |
-        echo "*** ${{ github.ref }} ***"
-        echo "*** ${{ github.ref_name }} ***"
-        echo "*** ${{ github.base_ref || 'dummy' }} ***"
-         
+        netstat -lnpt
