--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -38,11 +38,15 @@ jobs:
           echo "Nothing has changed; skipping update."
           exit 0
         fi
-        git config user.name "ERP4SME-DevOps-GitHub-Workflow-User"
-        git config user.email "ERP4SME_DevOps_GitHub_Workflow_User@sap.com"
+        #git config user.name "ERP4SME-DevOps-GitHub-Workflow-User"
+        #git config user.email "ERP4SME_DevOps_GitHub_Workflow_User@sap.com"
+        git config user.name "Christoph Barbian"
+        git config user.email "christoph.barbian@sap.com"
         git add -A
-        git commit -m "Update chart (triggered by operator release $new_version)" \
-          -m "Repository: ${{ github.repository }}" \
-          -m "Release: ${{ github.event.release.tag_name }}" \
-          -m "Commit: ${{ github.sha }}"
+        git commit -F- <<END
+        Update chart (triggered by operator release $new_version)
+        Repository: ${{ github.repository }}
+        Release: ${{ github.event.release.tag_name }}
+        Commit: ${{ github.sha }}"
+        END
         git push
