--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -24,24 +24,26 @@ jobs:
         old_semver=${old_version#v}
         new_version=${{ github.event.release.tag_name }}
         new_semver=${new_version#v}
+
         higher_semver=$(echo -e "$old_semver\n$new_semver" | sort -r -n -t. -k1 -k2 -k3 | head -n1)
         if [ "$higher_semver" != "$new_semver" ]; then
           echo "Target appVersion ($new_version) is not higher than current appVersion ($old_version); skipping update."
           exit 0
         fi
+
         echo "Updating custom resource definitions (./chart/crds) ..."
         rm -rf chart/crds
         cp -r ../crds chart
+
         echo "Updating appVersion in ./chart/Chart.yaml (current: $old_version; target: $new_version) ..."
         perl -pi -e "s#^appVersion:.*#appVersion: $new_version#g" chart/Chart.yaml
         if [ -z "$(git status --porcelain)" ]; then
           echo "Nothing has changed; skipping update."
           exit 0
         fi
-        #git config user.name "ERP4SME-DevOps-GitHub-Workflow-User"
-        #git config user.email "ERP4SME_DevOps_GitHub_Workflow_User@sap.com"
-        git config user.name "Christoph Barbian"
-        git config user.email "christoph.barbian@sap.com"
+        
+        git config user.name "ERP4SME-DevOps-GitHub-Workflow-User"
+        git config user.email "134080766+ERP4SME-DevOps-GitHub-Workflow-User@users.noreply.github.com"
         git add -A
         git commit -F- <<END
         Update chart (triggered by operator release $new_version)
