--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,6 +4,10 @@ on:
   release:
     types: [published]
 
+env:
+  CHART_REPOSITORY: cbarbian-sap/wf-test-2
+  CHART_DIRECTORY: chart
+
 jobs:
   do-the-test:
     name: Do something
@@ -14,34 +18,34 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
       with: 
-        repository: cbarbian-sap/wf-test-2
-        path: wf-test-2
+        repository: ${{ env.CHART_REPOSITORY }}
+        path: chart-repository
         token: ${{ secrets.WORKFLOW_USER_GH_TOKEN }}
     - name: Do it
       run: |
-        cd wf-test-2
-        old_version=$(yq .appVersion chart/Chart.yaml)
+        cd chart-repository
+        old_version=$(yq .appVersion ${{ env.CHART_DIRECTORY }}/Chart.yaml)
         old_semver=${old_version#v}
         new_version=${{ github.event.release.tag_name }}
         new_semver=${new_version#v}
 
         higher_semver=$(echo -e "$old_semver\n$new_semver" | sort -r -n -t. -k1 -k2 -k3 | head -n1)
         if [ "$higher_semver" != "$new_semver" ]; then
-          echo "Target appVersion ($new_version) is not higher than current appVersion ($old_version); skipping update."
+          echo "Target appVersion ($new_version) is lower than current appVersion ($old_version); skipping update."
           exit 0
         fi
 
-        echo "Updating custom resource definitions (./chart/crds) ..."
-        rm -rf chart/crds
-        cp -r ../crds chart
+        echo "Updating custom resource definitions (${{ env.CHART_DIRECTORY }}/crds) ..."
+        rm -rf ${{ env.CHART_DIRECTORY }}/crds
+        cp -r ../crds ${{ env.CHART_DIRECTORY }}
 
-        echo "Updating appVersion in ./chart/Chart.yaml (current: $old_version; target: $new_version) ..."
-        perl -pi -e "s#^appVersion:.*#appVersion: $new_version#g" chart/Chart.yaml
+        echo "Updating appVersion in ${{ env.CHART_DIRECTORY }}/Chart.yaml (current: $old_version; target: $new_version) ..."
+        perl -pi -e "s#^appVersion:.*#appVersion: $new_version#g" ${{ env.CHART_DIRECTORY }}/Chart.yaml
         if [ -z "$(git status --porcelain)" ]; then
           echo "Nothing has changed; skipping update."
           exit 0
         fi
-        
+
         git config user.name "ERP4SME-DevOps-GitHub-Workflow-User"
         git config user.email "134080766+ERP4SME-DevOps-GitHub-Workflow-User@users.noreply.github.com"
         git add -A
