--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,28 +5,31 @@ on:
     types: [published]
 
 env:
-  CHART_REPOSITORY: cbarbian-sap/wf-test-2
-  CHART_DIRECTORY: chart
   WORKFLOW_USER_NAME: ERP4SME-DevOps-GitHub-Workflow-User
   WORKFLOW_USER_EMAIL: 134080766+ERP4SME-DevOps-GitHub-Workflow-User@users.noreply.github.com
 
 jobs:
-  do-the-test:
-    name: Do something
+  update-chart:
     runs-on: ubuntu-22.04
+    env:
+      CHART_REPOSITORY: cbarbian-sap/wf-test-2
+      CHART_DIRECTORY: chart
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-    - name: Checkout
+
+    - name: Checkout chart repository
       uses: actions/checkout@v3
-      with: 
+      with:
         repository: ${{ env.CHART_REPOSITORY }}
         path: chart-repository
         token: ${{ secrets.WORKFLOW_USER_GH_TOKEN }}
-    - name: Do it
+
+    - name: Update chart repository
       run: |
         cd chart-repository
-        old_version=$(yq .appVersion ${{ env.CHART_DIRECTORY }}/Chart.yaml)
+        old_version=$(yq .appVersion $CHART_DIRECTORY/Chart.yaml)
         old_semver=${old_version#v}
         new_version=${{ github.event.release.tag_name }}
         new_semver=${new_version#v}
@@ -37,24 +40,25 @@ jobs:
           exit 0
         fi
 
-        echo "Updating custom resource definitions (${{ env.CHART_DIRECTORY }}/crds) ..."
-        rm -rf ${{ env.CHART_DIRECTORY }}/crds
-        cp -r ../crds ${{ env.CHART_DIRECTORY }}
+        echo "Updating custom resource definitions ($CHART_DIRECTORY/crds) ..."
+        rm -rf $CHART_DIRECTORY/crds
+        cp -r ../crds $CHART_DIRECTORY
 
-        echo "Updating appVersion in ${{ env.CHART_DIRECTORY }}/Chart.yaml (current: $old_version; target: $new_version) ..."
-        perl -pi -e "s#^appVersion:.*#appVersion: $new_version#g" ${{ env.CHART_DIRECTORY }}/Chart.yaml
+        echo "Updating appVersion in $CHART_DIRECTORY/Chart.yaml (current: $old_version; target: $new_version) ..."
+        perl -pi -e "s#^appVersion:.*#appVersion: $new_version#g" $CHART_DIRECTORY/Chart.yaml
+
         if [ -z "$(git status --porcelain)" ]; then
           echo "Nothing has changed; skipping update."
           exit 0
         fi
 
-        git config user.name "${{ env.WORKFLOW_USER_NAME }}"
-        git config user.email "${{ env.WORKFLOW_USER_EMAIL }}"
+        git config user.name "$WORKFLOW_USER_NAME"
+        git config user.email "$WORKFLOW_USER_EMAIL"
         git add -A
         git commit -F- <<END
         Update chart (triggered by operator release $new_version)
         Repository: ${{ github.repository }}
         Release: ${{ github.event.release.tag_name }}
-        Commit: ${{ github.sha }}"
+        Commit: ${{ github.sha }}
         END
         git push
