--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,30 +1,19 @@
 name: Do something
 
 on:
-  workflow_dispatch:
-    inputs:
-      prefix: 
-        description: Tag prefix
-        required: false
+  push:
+    branches:
+    - main
 
-env:
-  XXX: ${{ github.repository.split("-" }}
+concurrency: test
 
 jobs:
   one:
     runs-on: ubuntu-latest
-    name: Get highest tag
+    name: Do it
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
-    - id: get-tag
-      name: Get tag
-      uses: ./.github/actions/get-highest-tag
-      with:
-        prefix: ${{ inputs.prefix }}
-    - id: print-tag
-      name: Print tag
+    - name: Wait
       run: |
-        echo "*** XXX: ${{ env.XXX }} ***"
-        echo "*** tag: ${{ steps.get-tag.outputs.tag }} ***"
-        echo "*** version: ${{ steps.get-tag.outputs.version }} ***"
+        sleep 60 
