--- a/.github/workflows/trigger-b1.yaml
+++ b/.github/workflows/trigger-b1.yaml
@@ -1,4 +1,4 @@
-name: Trigger
+name: Trigger b1
 
 on:
   workflow_dispatch:
@@ -6,7 +6,7 @@ on:
 jobs:
   push:
     runs-on: ubuntu-latest
-    name: Push to repository
+    name: Push to repository (b1)
     steps:
     - name: Checkout repository
       uses: actions/checkout@v3
